# gpu-fft

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
bench-results/: latest.md
bench-results/archive/: 2026-02-22_13-41-27.md  2026-02-22_15-26-46.md  2026-02-22_16-13-38.md  2026-02-22_16-27-26.md  2026-02-22_16-44-35.md  2026-02-22_17-37-36.md
benches/: compare_bench.rs  fft_bench.rs
examples/: backends.rs  simple.rs
ffi/: mlx_fft.c  mlx_fft.h
scripts/: bench.sh  export_bench.py
src/: butterfly.rs  fft.rs  ifft.rs  lib.rs  psd.rs  twiddles.rs  utils.rs
src/mlx/: ffi.rs  fft.rs  mod.rs
tests/: fft.rs  fft_batch.rs  ifft.rs  ifft_batch.rs  parity.rs  roundtrip.rs
tests/common/: mod.rs
